Manifest/stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysts
spec:
  serviceName: mysqldb
  replicas: 1
  selector:
    matchLabels: 
      app: app-database
  template:
    metadata:
      labels:
         app: app-database

    spec:
      containers:
        - image:  kavya318506/phpapp:dbimage
          name: db-cont
          ports:
             - containerPort: 3306
  # Integrate the secerts
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpus: "200m"
              memory: "250Mi"
          volumeMounts:
             - name: mypvc
               mountPath: /var/lib/mysql


      volumeClaimTemplates:
         - metadata:
             name: mypvc
           spec:
             accessModes:
                 - ReadWriteOnce
             resources: 
               requests:
                  storage: 2Gi
