Manifest/app-svc.yaml
apiVersion: v1
kind: Service
metadata: 
 name: app-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
