Manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    ingressClassName: nginx
    rules:
      - http:
        paths:
          - path:  /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port: 
                  number: 80
